# Ooooooh-thats-sad

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Scanner.cpp  Scanner.h  SensorData.cpp  SensorData.h  main.cpp
